--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,11 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
+DB_HOST=127.0.0.1
 DB_DATABASE='yourTricks'
-DB_USER='root'
-DB_PASSWORD='R.mi@52620042005'
-DB_PORT=3306
+DB_USER='cliente'
+DB_PASSWORD='R.mi@526urubu100'
+DB_PORT=3307
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
