Últimos detalhes estilização

--- a/.env.dev
+++ b/.env.dev
@@ -1,11 +1,13 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=127.0.0.1
+# DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_DATABASE='yourTricks'
-DB_USER='cliente'
-DB_PASSWORD='R.mi@526urubu100'
-DB_PORT=3307
+# DB_USER='cliente'
+DB_USER='root'
+DB_PASSWORD='R.mi@52620042005'
+DB_PORT=3306
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
