--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # A linha abaixo determina que o diretório node_modules não será enviado ao repositório remoto
 node_modules
 package-lock.json
+auxGame
 
 .github
