--- a/.env.dev
+++ b/.env.dev
@@ -3,10 +3,10 @@ AMBIENTE_PROCESSO=desenvolvimento
 # Configurações de conexão com o banco de dados
 # DB_HOST=127.0.0.1
 DB_HOST=localhost
-DB_DATABASE='yourTricks'
+DB_DATABASE='***'
 # DB_USER='cliente'
-DB_USER='root'
-DB_PASSWORD='R.mi@52620042005'
+DB_USER='**********'
+DB_PASSWORD='******'
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
