arquivos de composição de mini-game

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # A linha abaixo determina que o diretório node_modules não será enviado ao repositório remoto
 node_modules
 package-lock.json
-auxGame
+# auxGame
 
 .github
 
